	PR gold/12818 	* symtab.cc (Symbol::should_add_dynsym_entry): Don't add undefined 	symbols which are not used in a relocation.